# src/controllers/console.controller.ts
@@ -1,6 +1,9 @@
+
+
 import { Controller, Get, Post, Delete, Route, Path, Body, Tags, Patch } from "tsoa";
 import { consoleService } from "../services/console.service";
 import { ConsoleDTO } from "../dto/console.dto";
+import { notFound } from "../error/NotFoundError";
 
 @Route("consoles")
 @Tags("Consoles")
@@ -13,8 +16,10 @@ export class ConsoleController extends Controller {
 
   // Récupère une console par ID
   @Get("{id}")
-  public async getConsoleById(@Path() id: number): Promise<ConsoleDTO | null> {
-    return consoleService.getConsoleById(id);
+  public async getConsoleById(@Path() id: number): Promise<ConsoleDTO> {
+    const console = await consoleService.getConsoleById(id);
+    if (!console) notFound("Console");
+    return console;
   }
 
   // Crée une nouvelle console
@@ -37,8 +42,11 @@ export class ConsoleController extends Controller {
   public async updateConsole(
     @Path() id: number,
     @Body() requestBody: ConsoleDTO
-  ): Promise<ConsoleDTO | null> {
+  ): Promise<ConsoleDTO> {
     const { name, manufacturer } = requestBody;
-    return consoleService.updateConsole(id, name, manufacturer);
+    const updatedConsole = await consoleService.updateConsole(id, name, manufacturer);
+    if (!updatedConsole) notFound("Console");
+    return updatedConsole;
   }
 }
+
