# src/dto/review.dto.ts
@@ -1,4 +1,14 @@
-import { GameDTO } from "./game.dto";
+import { GameDTO } from "./game.dto"
 
 export interface ReviewDTO {
+    id?: number,
+    rating: number,
+    review: string,
+    gameId: number;
+}
+
+export interface CreateReviewDTO {
+    rating: number,
+    review: string,
+    gameId: number;
 }
